# MASGuard-Demo

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-bcmr.txt
assets/: masguard_snapshot.json
bcmr_swe/: __init__.py  types.py
bcmr_swe/ablation/: __init__.py  action_space.py  configs.py  state_projection.py
bcmr_swe/agent/: __init__.py  coordinator.py  locator.py  patcher.py  verifier.py
bcmr_swe/experiments/: artifact_io.py  common.py  governance.py  manifest_bootstrap_utils.py  mas_dx_run_action_enforced_recovery.py  mas_recovery_run_clean_start_baseline.py  run_recovery_only_benchmark.py  run_registry_guard.py  substrate_ctx.py
bcmr_swe/mas_diagnosis/: __init__.py  diagnosis_inputs.py  graph_builder.py  normalizer.py  schema.py
bcmr_swe/mas_recovery/: __init__.py  checkpoint_policy.py  edit_intent.py  failure_family_contract.py  failure_span_family.py  fusion_controller.py  hypothesis.py  intervention_loop.py  limited_freeze_observation.py  observation.py  operator_templates.py  patch_contract_verifier.py  patch_intent_gate.py  preference_design.py  propagation_graph.py  recovery_blueprint.py  recovery_controller.py  recovery_policy_v2.py
bcmr_swe/models/: __init__.py  anthropic_compatible_chat.py  gcrv.py  gemini_chat.py  openai_compatible_chat.py  student_reranker.py  xgb_baseline.py
bcmr_swe/observability/: __init__.py  event_log.py  invariants.py
bcmr_swe/provenance/: __init__.py  checkpoint_store.py  graph_store.py  recorder.py  suspect_region.py
docs/: architecture.md  integration.md
swe_mas/: __init__.py
tests/: test_core.py
(+128 files in other folders)
